src/test/resources/etapa4/failing/wrongWhileCond.ru
/? La condición del while no es de tipo Bool

struct A{
}
impl A {
    .(){}
    fn m1 () -> void {
        while(48){

        }
    }

}


start {}